# fractal_clock

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: compute_shader.wgsl  gui.rs  main.rs  render_shader.wgsl  shader.wgsl  window_render_shader.wgsl
