[package]
name = "fractal_clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = "0.28.3"
env_logger = "0.10"
wgpu = "0.16"
pollster = "0.3"
bytemuck = { version = "1.13.0", features = ["derive"] }
oneshot = "0.1.5"
video-rs = { version = "0.4.0", features = ["ndarray"] }
ndarray = "0.15.6"
palette = "0.7.2"
clap = { version = "4.1.11", features = ["derive"] }
image = "0.24.7"
